test/fail/generics/ensure_error_has_question_mark.lly
#[
SyntaxError: Function f, argument #1 is invalid:
Expected Type: list[?]
Received Type: integer
    from ensure_error_has_question_mark.lly:10
]#

define f[A](a: list[A]) {}

f(10)
